# Pi-Dashboard

./: .cache  .cache-pi-dashboard  README.md  app.py  git  git.pub
static/: app.js  style.css
static/js/: api.js  colorCalc.js  gestures.js  main.js  player.js  system.js  theme.js
templates/: index.html
unit-test/: CMakeLists.txt
